# Vibe-CS101

./: .env.example  AGENTS.md  CHANGELOG.md  KNOWLEDGE_BASE.md  LICENSE  README.md  TUTORIAL.md  pyproject.toml
.github/workflows/: ci.yml  update-index.yml
scripts/: update_sol101.py  update_sol101.sh
tests/: test_agent.py  test_cli.py  test_config.py  test_indexer.py  test_journal.py  test_llm.py  test_mcp.py  test_ratelimit.py  test_search.py  test_server.py  test_sessions.py  test_tools.py  test_users.py
vibe_cs101/: __init__.py  agent.py  audit.py  cli.py  config.py  courses.py  fetch.py  indexer.py  journal.py  llm.py  mcp_server.py  ratelimit.py  server.py  sessions.py  store.py  tools.py  users.py
vibe_cs101/web/: index.html
