[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-cs101"
version = "0.1.0"
description = "个人计算机基础学习智能体：检索并讲解 cs101/cs201 课件与题解"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vibe-cs101 = "vibe_cs101.cli:main"

[tool.setuptools.packages.find]
include = ["vibe_cs101*"]

[tool.setuptools.package-data]
vibe_cs101 = ["web/*"]
